<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">9Gist</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="search">Search</string>
    <string name="email_add">E-mail address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="terms">&lt;u>Terms and condition&lt;/u></string>
    <string name="forgot_pwd">Forgot password?</string>
    <string name="new_here">&lt;u>New here? Sign Up&lt;/u></string>
    <string name="all_matches">All Matches</string>
    <string name="edit">Edit</string>
    <string name="type_msg">Type your message</string>
    <string name="start_conv">Start a conversation</string>
    <string name="keep_surf">Keep Surfing</string>
    <string name="or">or</string>
    <string name="no_one_around">There’s no one new around you!</string>
    <string name="invite_ur_frnds">Invite Your Friends</string>
    <string name="scan_again">Scan Again</string>
    <string name="gen_setting">General Settings</string>
    <string name="net_status">Network Status</string>
    <string name="connected">Connected</string>
    <string name="notification">Notifications</string>
    <string name="save_gal">Save to gallery</string>
    <string name="chat_setting">Chat Settings</string>
    <string name="col_theme">Colour Theme</string>
    <string name="about">About</string>
    <string name="tell_frnd">Tell a friend</string>
    <string name="restore_def">Restore defaults</string>
    <string name="acc_seting">Account Settings</string>
    <string name="lorem_ipusm">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent turpis erat, tristique at auctor non, fermentum auctor tellus. Ut nisi elit, luctus sit amet lectus egestas, trices congue lacus. Praesent ut ornare lectus. Suspen tum consequat viverra.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="Page1Title">9Gist</string>
    <string name="Page2Title">Free</string>
    <string name="Page3Title">Private</string>
    <string name="Page1Message">Be in <![CDATA[<b>control</b>]]> of your <![CDATA[<br/>]]> opinion <![CDATA[<b>whenever</b>]]> and <![CDATA[<b>however</b>]]>.</string>
    <string name="Page2Message">it is<![CDATA[<b> free forever</b>]]>. No ads.<![CDATA[<br/>]]>No subscription fees.</string>
    <string name="Page3Message"><![CDATA[<b>9Gist</b>]]> messages are heavily encrypted<![CDATA[<br/>]]>and can self-destruct.</string>
    <string name="ChangePhoneHelp">We will send an SMS with a confirmation code to your new number.</string>
    <string name="action_done">Done</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_home_screen">9Gist</string>
    <string name="title_activity_confirm">Confirmation</string>
    <string name="please_wait">Please wait...</string>
    <string name="send_code">Sending code, please wait...</string>
    <string name="no">No</string>
    <string name="code_send_error">Encountered error pls try again later</string>
    <string name="yes">Yes</string>
    <string name="alert_title">Verify</string>
    <string name="signup_error_label">Pls enter all the required field</string>
    <string name="confirm_note">9Gist code is the five digit numeric number sent to your mobile device with mobile number +%s</string>
    <string name="title_activity_upload_pics">Profile</string>
    <string name="encounter_error_label">Error encountered please try again later</string>
    <string name="code_error_label">Invalid confirmation code</string>
    <string name="action_select">Select</string>
    <string name="crop__saving">Saving picture…</string>
    <string name="crop__wait">Please wait…</string>
    <string name="crop__pick_error">No image sources available</string>
    <string name="crop__done">DONE</string>
    <string name="crop__cancel" ignore="ButtonCase">CANCEL</string>
    <string name="storage_key">STORAGE</string>
    <string name="storage_default_value">INTERNAL</string>
    <string name="title_storage_type">Storage Type</string>
    <string name="title_public_external_storage_type">Public External</string>
    <string name="title_private_external_storage_type">Private External</string>
    <string name="title_internal_storage_type">Internal Storage</string>
    <string name="empty_friend_label">No friend found</string>
    <string name="menu_search">Search</string>
    <string name="action_share">Share</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="profile">Profile</string>
    <string name="invite">Invite Contacts</string>
    <string name="invitaion_label">Download 9gist app from google app store https://play.google.com/store/apps/details?id=com.zumma.app.ninegist</string>
    <string name="menu_invite">Invite</string>
    <string name="menu_add_contact">Add Contact</string>
    <string name="no_contacts">No Contact found</string>
    <string name="action_add_contact">Contacts</string>
    <string name="activity_contacts_list">Contacts</string>
    <string name="missed_chat">Missed chat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connecting">Connecting to server...</string>
    <string name="agreement"></string>
    <string name="verify">Verify that %s is your correct mobile Number</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="profile_image">Profile Image</string>
    <string name="upload_button">Select Button</string>
    <string name="edit_profile">Profile</string>
    <string name="label_picture">Select Picture</string>

</resources>
