<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrol"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/pad_5dp">

        <TextView
            android:id="@id/textView1"
            style="@style/lbl_setting2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gen_setting" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/pad_10dp">

            <TextView
                android:id="@id/textView1"
                style="@style/lbl_setting1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/net_status" />

            <TextView
                android:id="@id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connected"
                android:textColor="@color/green"
                android:textSize="@dimen/txt_16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/pad_10dp">

            <TextView
                android:id="@id/textView1"
                style="@style/lbl_setting1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/notification" />

            <Switch
                android:id="@+id/switch1"
                style="@style/custom_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/pad_10dp">

            <TextView
                android:id="@id/textView1"
                style="@style/lbl_setting1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/save_gal" />

            <Switch
                android:id="@+id/switch2"
                style="@style/custom_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/pad_10dp">

            <TextView
                android:id="@id/textView1"
                style="@style/lbl_setting1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/chat_setting" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/pad_10dp">

            <TextView
                android:id="@id/textView1"
                style="@style/lbl_setting1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/col_theme" />

            <Button
                android:id="@+id/themeRed"
                style="@style/btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_theme_red" />

            <Button
                android:id="@+id/themeWhite"
                style="@style/btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_10dp"
                android:layout_marginRight="@dimen/pad_10dp"
                android:background="@drawable/btn_theme_white" />

            <Button
                android:id="@+id/themeGray"
                style="@style/btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_theme_gray" />
        </LinearLayout>

        <TextView
            android:id="@id/textView1"
            style="@style/lbl_setting2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acc_seting" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/pad_10dp">

            <TextView
                android:id="@+id/edit_profile"
                style="@style/lbl_setting1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/edit_profile"
                android:clickable="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/pad_10dp">

            <TextView
                android:id="@id/textView1"
                style="@style/lbl_setting1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/about" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/pad_10dp">

            <TextView
                android:id="@id/textView1"
                style="@style/lbl_setting1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/tell_frnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/pad_10dp">

            <TextView
                android:id="@id/textView1"
                style="@style/lbl_setting1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/restore_def" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>