<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/pad_40dp"
    android:paddingRight="@dimen/pad_40dp">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:src="@drawable/logo_login" />

    <EditText
        android:id="@+id/editText1"
        style="@style/txt_white"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_email"
        android:hint="@string/email_add"
        android:inputType="textEmailAddress">

        <requestFocus />
    </EditText>

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/divider"
        android:background="@color/gray_divider" />

    <EditText
        android:id="@+id/editText2"
        style="@style/txt_white"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_pwd"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/btn_red_white"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/pad_40dp"
        android:layout_marginTop="@dimen/pad_10dp"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/btnFb"
        style="@style/btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_fb" />

    <Button
        android:id="@+id/btnTw"
        style="@style/btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_10dp"
        android:background="@drawable/btn_tw" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@id/textView1"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:paddingBottom="@dimen/pad_20dp"
            android:paddingTop="@dimen/pad_20dp"
            android:text="@string/forgot_pwd"
            android:textColor="@color/main_color_red_light"
            android:textSize="@dimen/txt_13sp" />

        <TextView
            android:id="@+id/lblReg"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:paddingBottom="@dimen/pad_20dp"
            android:paddingTop="@dimen/pad_20dp"
            android:text="@string/new_here"
            android:textColor="@color/main_color_red_light"
            android:textSize="@dimen/txt_13sp" />
    </LinearLayout>
</LinearLayout>