<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainv"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_color_red">

    <ImageView
        android:id="@+id/img"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rings_red"
        android:paddingBottom="@dimen/pad_40dp"
        android:scaleType="center"
        android:src="@drawable/user_find" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/pad_30dp"
        android:paddingLeft="@dimen/pad_40dp"
        android:paddingRight="@dimen/pad_40dp">

        <TextView
            android:id="@+id/lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pad_5dp"
            android:text="@string/no_one_around"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_16sp" />

        <LinearLayout
            android:id="@+id/btnInvite"
            style="@style/btn_red_white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblInvite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_invite_red"
                android:drawablePadding="@dimen/pad_5dp"
                android:gravity="center_vertical"
                android:text="@string/invite_ur_frnds"
                android:textColor="@color/main_color_red"
                android:textSize="@dimen/txt_16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnScan"
            style="@style/btn_red_white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_10dp"
            android:background="@drawable/white_border_rect">

            <TextView
                android:id="@+id/lblScan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_scan"
                android:drawablePadding="@dimen/pad_5dp"
                android:gravity="center_vertical"
                android:text="@string/scan_again"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_16sp" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>