<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_color_red"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/pad_40dp"
    android:paddingRight="@dimen/pad_40dp">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/lbl_match" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/pad_40dp"
        android:layout_marginTop="@dimen/pad_40dp"
        android:gravity="center"
        android:paddingBottom="@dimen/pad_10dp"
        android:paddingTop="@dimen/pad_10dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user_match1" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/pad_20dp"
            android:src="@drawable/user_match2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnConversation"
        style="@style/btn_red_white"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_chat_red"
            android:drawablePadding="@dimen/pad_5dp"
            android:gravity="center_vertical"
            android:text="@string/start_conv"
            android:textColor="@color/main_color_red"
            android:textSize="@dimen/txt_16sp" />
    </LinearLayout>

    <TextView
        android:id="@id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/pad_5dp"
        android:text="@string/or"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_13sp"
        android:textStyle="italic" />

    <LinearLayout
        android:id="@+id/btnSurf"
        style="@style/btn_red_white"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_border_rect">

        <TextView
            android:id="@id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_search_white"
            android:drawablePadding="@dimen/pad_5dp"
            android:gravity="center_vertical"
            android:text="@string/keep_surf"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_16sp" />

    </LinearLayout>
</LinearLayout>